Added initial description

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   <title>Web Programming</title>
 </head>
 <body>
-    Hello, World!
+  <h1>Hello, Class of Web Programming!</h1>
+  <p>
+    You have entered the domain of where I store my projects for MEDP 34100 
+    - Web Programming.
+  </p>
 </body>
 </html>
