--- a/index.html
+++ b/index.html
@@ -7,10 +7,17 @@
   <title>Web Programming</title>
 </head>
 <body>
+  <nav>
+    <ul>
+      <li><a href="/">Home</a></li>
+      <li><a href="/assignments/">Assignments</a></li>
+      <li><a href="/blog/">Blog</a></li>
+    </ul>
+  </nav>
   <h1>Hello, Class of Web Programming!</h1>
   <p>
     You have entered the domain of where I store my projects for MEDP 34100 
-    - Web Programming.
+    - Web Programming. Mind the layout, it be of utmost temporaries
   </p>
 </body>
 </html>
