--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
   <nav>
     <ul>
-      <li><a href="/">Home</a></li>
-      <li><a href="/assignments/">Assignments</a></li>
-      <li><a href="/blog/">Blog</a></li>
+      <li><a href="/web-programming/">Home</a></li>
+      <li><a href="/web-programming/assignments/">Assignments</a></li>
+      <li><a href="/web-programming/blog/">Blog</a></li>
     </ul>
   </nav>
   <h1>Hello, Class of Web Programming!</h1>
