--- a/assignments/index.html
+++ b/assignments/index.html
@@ -7,10 +7,17 @@
   <title>Assignments</title>
 </head>
 <body>
+  <nav>
+    <ul>
+      <li><a href="/web-programming/">Home</a></li>
+      <li><a href="/web-programming/assignments/">Assignments</a></li>
+      <li><a href="/web-programming/blog/">Blog</a></li>
+    </ul>
+  </nav>
   <h1>Assignments</h1>
   <p>Here you will find a complete list of all the assignments done for this course</p>
   <ul>
-    <li>Re-imagining Twitter</li>
+    <li><a href="./01/index.html">Re-imagining Twitter</a></li>
   </ul>
 </body>
 </html>
