Added vbasic styling

--- a/assignments/index.html
+++ b/assignments/index.html
@@ -18,6 +18,7 @@
   <p>Here you will find a complete list of all the assignments done for this course</p>
   <ul>
     <li><a href="./01/index.html">Re-imagining Twitter</a></li>
+    <li><a href="./02/index.html">Shuffling Done Weird</a></li>
   </ul>
 </body>
 </html>
