--- a/index.html
+++ b/index.html
@@ -4,20 +4,35 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="style.css">
   <title>Web Programming</title>
 </head>
 <body>
   <nav>
     <ul>
       <li><a href="/web-programming/">Home</a></li>
-      <li><a href="/web-programming/assignments/">Assignments</a></li>
-      <li><a href="/web-programming/blog/">Blog</a></li>
+      <li><a href="./assignments/index.html">Assignments</a></li>
+      <li><a href="/web-programming/blog/index.html">Blog</a></li>
     </ul>
   </nav>
-  <h1>Hello, Class of Web Programming!</h1>
-  <p>
-    You have entered the domain of where I store my projects for MEDP 34100 
-    - Web Programming. Mind the layout, it be of utmost temporaries
-  </p>
+  <div class="main">
+    <h1>Hello, Class of Web Programming!</h1>
+    <div class="block-l">
+      <p>
+        Welcome to Esteban Mundo's Home Page for:
+        <br/>
+        <b>MEDP 34100 - Web Programming</b>
+        <br/>
+        Here, you are able to locate all my projects, blog posts, and weird 
+        thoughts as I have fun designing and styling this webpage.
+      </p>
+      <p>
+        For quick navigation, use the navbar. Otherwise, you can click here (link not existent ATM)
+        to look at the patch log for this website.
+      </p>
+    </div>
+
+  </div>
+
 </body>
 </html>
