--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <ul>
       <li><a href="/web-programming/">Home</a></li>
       <li><a href="./assignments/index.html">Assignments</a></li>
-      <li><a href="/web-programming/blog/index.html">Blog</a></li>
+      <li><a href="./blog/index.html">Blog</a></li>
     </ul>
   </nav>
   <div class="main">
