--- a/assignments/index.html
+++ b/assignments/index.html
@@ -19,6 +19,7 @@
   <ul>
     <li><a href="./01/index.html">Re-imagining Twitter</a></li>
     <li><a href="./02/index.html">Shuffling Done Weird</a></li>
+    <li><a href="./03/index.html">How Far Away From Hunter?</a></li>
   </ul>
 </body>
 </html>
