--- a/assignments/index.html
+++ b/assignments/index.html
@@ -20,6 +20,7 @@
     <li><a href="./01/index.html">Re-imagining Twitter</a></li>
     <li><a href="./02/index.html">Shuffling Done Weird</a></li>
     <li><a href="./03/index.html">How Far Away From Hunter?</a></li>
+    <li><a href="./04/index.html">Packets of Vidya Gaemz</a></li>
   </ul>
 </body>
 </html>
