Added assignment 5 and 6

--- a/assignments/index.html
+++ b/assignments/index.html
@@ -21,6 +21,8 @@
     <li><a href="./02/index.html">Shuffling Done Weird</a></li>
     <li><a href="./03/index.html">How Far Away From Hunter?</a></li>
     <li><a href="./04/index.html">Packets of Vidya Gaemz</a></li>
+    <li><a href="./05/index.html">Serving It Up: Stonk Edition</a></li>
+    <li><a href="./06/index.html">What Bugs can I catch?</a></li>
   </ul>
 </body>
 </html>
